[package]
name = "cotton-netif"
version = "0.1.0"
authors = ["Peter Hartley <pdh@utter.chaos.org.uk>"]
edition = "2021"
license = "CC0-1.0"

[dependencies]
tokio = { version = "1.17", features = ["macros", "sync"] }
bitflags = "1.2"
futures-util = "0.3"
async-stream = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
neli = { version = "0.6", features = ["async"] }
