[workspace]
members = [
  "cotton-netif",
  "cotton-scsi",
  "cotton-ssdp",
  "cotton-unique",
  "cotton-usb-host",
  "cotton-usb-host-hid",
  "cotton-usb-host-msc",
  "cotton-w5500",
  "systemtests",
]

exclude = ["cross"]

resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"
