[package]
name = "cotton-netif"
version = "0.0.4"
description = "Enumerating available network interfaces and their IP addresses"
homepage = "https://github.com/pdh11/cotton"
repository = "https://github.com/pdh11/cotton"
categories = ["network-programming"]
authors = ["Peter Hartley <pdh@utter.chaos.org.uk>"]
edition = "2021"
license = "CC0-1.0"
rust-version = "1.65"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "nightly"]

[[example]]
name = "netif-monitor"
required-features = ["std", "async", "sync"]
doc-scrape-examples = true

[dependencies]
bitflags = { version = "1.3", default_features = false }
no-std-net = { version = "0.6", default_features = false }

[target.'cfg(target_os = "linux")'.dependencies]
neli = { version = "0.6", default_features = false, features = ["async"], optional = true }

[target.'cfg(not(target_os = "none"))'.dependencies]
tokio = { version = "1.24", default_features = false, features = ["macros", "sync", "rt"], optional = true }
tokio-test = { version = "0.4", default_features = false, optional = true }
futures-util = { version = "0.3", default_features = false, features = ["async-await", "async-await-macro"], optional = true }
async-stream = { version = "0.3", default_features = false, optional = true }
nix = { version = "0.27", default_features = false, features = ["net"], optional = true }
libc = { version = "0.2.139", default_features = false, optional = true }

[features]
default = ["std", "async", "sync"]
std = ["no-std-net/std"]
async = ["std", "dep:tokio", "dep:futures-util", "dep:async-stream", "dep:tokio-test", "dep:neli", "dep:nix"]
sync = ["std", "dep:nix", "dep:libc"]
