[package]
name = "cotton-ssdp"
version = "0.0.2"
description = "Implementing SSDP, the Simple Service Discovery Protocol"
homepage = "https://github.com/pdh11/cotton"
repository = "https://github.com/pdh11/cotton"
categories = ["network-programming"]
edition = "2021"
authors = ["Peter Hartley <pdh@utter.chaos.org.uk>"]
license = "CC0-1.0"
rust-version = "1.65"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "nightly"]

[dependencies]
cotton-netif = { path = "../cotton-netif", version = "0.0.3", default_features = false }
no-std-net = { version = "0.6", default_features = false }
tokio = { version = "1.18", default_features = false, features = ["macros", "net", "rt"], optional = true }
tokio-stream = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
futures-util = { version = "0.3", default_features = false, features = ["async-await", "async-await-macro"], optional = true }
slotmap = "1"
nix = { version = "0.24", default_features = false, features = ["uio"], optional = true }
libc = { version = "0.2", optional = true }
uuid = { version = "1.3", default_features = false, features = ["v4"] }
socket2 = { version = "0.4.7", optional = true }
url = { version = "2.3", default_features = false }
rand = { version = "0.8", default_features = false, features = ["std", "std_rng"] }
mock_instant = "0.2"
mio = { version = "0.8", default_features = false, features = ["os-poll", "net"], optional = true }

[features]
default = ["std", "async", "sync"]
std = ["cotton-netif/sync", "no-std-net/std", "dep:libc", "dep:nix", "dep:socket2"]
sync = ["std", "cotton-netif/sync", "dep:mio"]
async = ["std", "cotton-netif/async", "dep:futures", "dep:futures-util", "dep:tokio", "dep:tokio-stream"]

[[test]]
name = "async_service"
required-features = ["std", "async"]

[[test]]
name = "async_service_err"
required-features = ["std", "async"]

[[test]]
name = "service"
required-features = ["std", "sync"]

[[test]]
name = "service_err"
required-features = ["std", "sync"]

[[example]]
name = "ssdp-search"
required-features = ["std", "async"]

[[example]]
name = "ssdp-search-mio"
required-features = ["std", "sync"]
