[package]
name = "cotton-ssdp"
version = "0.0.5"
description = "Implementing SSDP, the Simple Service Discovery Protocol"
homepage = "https://github.com/pdh11/cotton"
repository = "https://github.com/pdh11/cotton"
categories = ["network-programming"]
edition = "2021"
authors = ["Peter Hartley <pdh@utter.chaos.org.uk>"]
license = "CC0-1.0"
rust-version = "1.80"

[package.metadata.docs.rs]
all-features = true

[dependencies]
cotton-netif = { path = "../cotton-netif", version = "0.0.6", default-features = false }
tokio = { version = "1.24", default-features = false, features = [
  "macros",
  "net",
  "rt",
], optional = true }
tokio-stream = { version = "0.1.2", default-features = false, optional = true }
futures = { version = "0.3", default-features = false, optional = true }
futures-util = { version = "0.3.31", default-features = false, features = [
  "async-await",
  "async-await-macro",
], optional = true }
slotmap = { version = "1", default-features = false }
nix = { version = "0.29", default-features = false, features = [
  "net",
  "socket",
  "uio",
], optional = true }
libc = { version = "0.2.155", default-features = false, optional = true }
uuid = { version = "1.8", default-features = false, features = [
  "v4",
], optional = true }
socket2 = { version = "0.5", default-features = false, optional = true }
rand = { version = "0.8", default-features = false, features = [
  "std",
  "std_rng",
], optional = true }
mio = { version = "1", default-features = false, features = [
  "os-poll",
  "net",
], optional = true }
smoltcp = { version = "0.12", default-features = false, features = [
  "medium-ethernet",
  "proto-ipv4",
  "proto-ipv6",
  "socket-udp",
  "socket-tcp",
  "proto-dhcpv4",
  "socket-dhcpv4",
  "multicast"
], optional = true }

[dev-dependencies]
serial_test = { version = "3" }

[features]
default = ["std", "async", "sync", "smoltcp"]
std = [
  "cotton-netif/sync",
  "dep:libc",
  "dep:nix",
  "dep:socket2",
  "dep:rand",
  "dep:uuid",
  "smoltcp/alloc",
  "smoltcp/std",
]
sync = ["std", "cotton-netif/sync", "dep:mio"]
async = [
  "std",
  "cotton-netif/async",
  "dep:futures",
  "dep:futures-util",
  "dep:tokio",
  "dep:tokio-stream",
]
smoltcp = ["dep:smoltcp"]

[[test]]
name = "async_service"
required-features = ["std", "async"]

[[test]]
name = "async_service_err"
required-features = ["std", "async"]

[[test]]
name = "service"
required-features = ["std", "sync"]

[[test]]
name = "service_err"
required-features = ["std", "sync"]

[[example]]
name = "ssdp-search"
required-features = ["std", "async"]

[[example]]
name = "ssdp-search-mio"
required-features = ["std", "sync"]
