[package]
name = "cotton-stm32-eth"
version = "0.0.1"
description = "Low-level driver for STM32 Ethernet peripheral"
homepage = "https://github.com/pdh11/cotton"
repository = "https://github.com/pdh11/cotton"
categories = ["network-programming"]
authors = ["Peter Hartley <pdh@utter.chaos.org.uk>"]
edition = "2021"
license = "CC0-1.0"
autotests = false

[dependencies]
cotton-stm32-eth-core = { path = "core" }
cross-stm32f7-nucleo = { path = "../cross-stm32f7-nucleo", optional = true }
serial_test = { version = "0.6" }

[features]
arm = []
stm32f7-nucleo = ["arm", "dep:cross-stm32f7-nucleo"]

[[test]]
name = "stm32f7-nucleo"
path = "tests/stm32f7-nucleo.rs"
required-features = ["stm32f7-nucleo"]
