[package]
name = "cotton-unique"
version = "0.1.0"
homepage = "https://github.com/pdh11/cotton"
repository = "https://github.com/pdh11/cotton"
authors = ["Peter Hartley <pdh@utter.chaos.org.uk>"]
edition = "2021"
license = "CC0-1.0"
rust-version = "1.65"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "nightly"]

[dependencies]
siphasher = { version = "1", default-features = false }
