[package]
name = "cotton-w5500"
version = "0.1.0"
description = "smoltcp driver for Wiznet W5500 SPI-to-Ethernet chip in MACRAW mode"
homepage = "https://github.com/pdh11/cotton"
repository = "https://github.com/pdh11/cotton"
categories = ["network-programming", "embedded"]
authors = ["Peter Hartley <pdh@utter.chaos.org.uk>"]
edition = "2021"
license = "CC0-1.0"
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true

[dependencies]
w5500 = "0.5"
# defmt 0.3.7 has msrv too big
defmt = ">=0.3.2, <0.3.7"
smoltcp = { version = "0.11", default-features = false, features = [
  "medium-ethernet",
  "proto-ipv4",
  "socket-raw",
], optional = true }
rp2040-hal = { version = "0.10", optional = true }
# embedded-hal-bus 0.2 assumes compare_exchange, which Cortex-M0 doesn't have
embedded-hal-bus = "0.1"

[dev-dependencies]
mockall = "0.13"

[features]
default = ["smoltcp", "std"]
std = []
smoltcp = ["dep:smoltcp"]
w5500-evb-pico = ["dep:rp2040-hal"]
