[package]
name = "cotton-w5500"
version = "0.2.0"
description = "smoltcp driver for Wiznet W5500 SPI-to-Ethernet chip in MACRAW mode"
homepage = "https://github.com/pdh11/cotton"
repository = "https://github.com/pdh11/cotton"
categories = ["network-programming", "embedded"]
authors = ["Peter Hartley <pdh@utter.chaos.org.uk>"]
edition.workspace = true
license = "CC0-1.0"
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
w5500 = "0.6"
smoltcp = { version = "0.12", default-features = false, features = [
  "medium-ethernet",
  "proto-ipv4",
  "socket-raw",
  "multicast"
], optional = true }
rp2040-hal = { version = "0.10", optional = true }
# embedded-hal-bus 0.2 assumes compare_exchange, which Cortex-M0 doesn't have
# embedded-hal-bus 0.3 requires Rust 1.81
embedded-hal-bus = { version = "0.1", optional = true }

[dev-dependencies]
mockall = "0.13"

[features]
default = ["smoltcp", "std"]
std = []
smoltcp = ["dep:smoltcp"]
w5500-evb-pico = ["dep:rp2040-hal", "dep:embedded-hal-bus"]
