[package]
name = "systemtests"
version = "0.0.1"
description = "System tests for Cotton"
homepage = "https://github.com/pdh11/cotton"
repository = "https://github.com/pdh11/cotton"
categories = ["network-programming"]
authors = ["Peter Hartley <pdh@utter.chaos.org.uk>"]
edition = "2021"
license = "CC0-1.0"
publish = false

# We don't want cargo test-all-features to require the existence of
# tons of devboards. We don't even want it to require a cross-compiler
# (feature="arm").
[package.metadata.cargo-all-features]
skip_feature_sets = ["arm"]

[dependencies]
cotton-ssdp = { path = "../cotton-ssdp" }
serial_test = { version = "0.6" }
assertables = { version = "7" }
nonblock = { version = "0.2" }
mio = { version = "0.8", default_features = false, features = ["os-poll", "net"] }
uuid = { version = "1.3", default_features = false, features = ["v4"] }

[features]
arm = []
stm32f746-nucleo = ["arm"]
