[package]
name = "systemtests"
version = "0.0.1"
description = "System tests for Cotton"
homepage = "https://github.com/pdh11/cotton"
repository = "https://github.com/pdh11/cotton"
categories = ["network-programming"]
authors = ["Peter Hartley <pdh@utter.chaos.org.uk>"]
edition.workspace = true
rust-version.workspace = true
license = "CC0-1.0"
publish = false
autotests = false

# We don't want cargo test-all-features to require the existence of
# tons of devboards. We don't even want it to require a cross-compiler
# (feature="arm").
[package.metadata.cargo-all-features]
skip_feature_sets = [["arm"], ["rp2040-w5500"], ["rp2350-w6100"], ["stm32f746-nucleo"]]

[dev-dependencies]
cotton-ssdp = { path = "../cotton-ssdp" }
serial_test = { version = "3" }
assertables = { version = "9.7.1" }
nonblock = { version = "0.2" }
mio = { version = "1", default-features = false, features = ["os-poll", "net"] }
uuid = { version = "1.8", default-features = false, features = ["v4"] }

[features]
arm = []
stm32f746-nucleo = ["arm"]
rp2040-w5500 = ["arm"]
rp2350-w6100 = ["arm"]

[[test]]
name = "device"
required-features = ["arm"]
