[package]
name = "cotton-stm32-eth-core"
version = "0.0.1"
description = "Low-level driver for STM32 Ethernet peripheral"
homepage = "https://github.com/pdh11/cotton"
repository = "https://github.com/pdh11/cotton"
categories = ["network-programming"]
authors = ["Peter Hartley <pdh@utter.chaos.org.uk>"]
edition = "2021"
license = "CC0-1.0"

[target.'cfg(target_os="none")'.dependencies]
defmt = "0.3.0"
