[package]
authors = ["Peter Hartley <pdh@utter.chaos.org.uk>"]
name = "cross-rp2040-w5500"
publish = false
edition = "2021"
version = "0.0.1"
autotests = false

[lib]
test = false
doctest = false
harness = false

[[bin]]
name = "rp2040-usb-otge100"
test = false
doctest = false
harness = false

[profile.dev]
opt-level = "s"
lto = true
codegen-units = 1

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = "symbols"

[dependencies]
cotton-usb-host = { path = "../../cotton-usb-host", default-features = false, features = [
  "rp2040",
] }
cotton-usb-host-msc = { path = "../../cotton-usb-host-msc", default-features = false, features = [
  "defmt",
] }
cotton-scsi = { path = "../../cotton-scsi", default-features = false }
cotton-ssdp = { path = "../../cotton-ssdp", default-features = false, features = [
  "smoltcp",
] }
cotton-netif = { path = "../../cotton-netif", default-features = false }
cotton-unique = { path = "../../cotton-unique", default-features = false }
cotton-w5500 = { path = "../../cotton-w5500", default-features = false, features = [
  "smoltcp",
  "w5500-evb-pico",
] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7"
defmt = "0.3.10"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
rp-pico = "0.9"
w5500-dhcp = { git = "https://github.com/newAM/w5500-rs", rev = "5384cec", version = "0.6", default-features = false, features = [
  "defmt",
] }
rp2040-flash = "0.5"
rp2040-hal = { version = "0.10", features = ["rt", "critical-section-impl"] }
critical-section = "1.1"

# We need one AFTER they moved embedded-hal to 1, but BEFORE they
# moved MSRV to 1.77 (by using ip_in_core)
w5500-ll = { git = "https://github.com/newAM/w5500-rs", rev = "5384cec", features = [
  "eh1",
] }
embedded-hal = "1"
embedded-hal-nb = "1"
# embedded-hal-bus 0.2 assumes compare_exchange, which Cortex-M0 doesn't have
embedded-hal-bus = "0.1"
fugit = "0.3"
systick-monotonic = "1.0"

w5500 = "0.5"
smoltcp = { version = "0.11", features = [
  "medium-ethernet",
  "proto-ipv4",
  "socket-udp",
  "socket-tcp",
  "defmt",
  "proto-dhcpv4",
  "socket-dhcpv4",
  "proto-igmp",
], default-features = false }
embedded-alloc = "0.5"
no-std-net = { version = "0.6", default-features = false }
uuid = { version = "1.8", default-features = false, features = ["v8"] }
git-version = "0.3.9"

rtic = { version = "2.1", features = ["thumbv6-backend"] }
rtic-monotonics = { version = "2.0.2", features = ["rp2040"] }
rtic-sync = "1.0.2"
rtic-common = "1"
futures-util = { version = "0.3", default-features = false }
static_cell = "2"
portable-atomic = { version = "1", features = ["critical-section"] }
