[package]
authors = ["Peter Hartley <pdh@utter.chaos.org.uk>"]
name = "cross-rp2040-w5500"
publish = false
edition = "2021"
version = "0.0.1"
autotests = false

[lib]
test = false
doctest = false
harness = false

[[bin]]
name = "rp2040-usb-otge100"
test = false
doctest = false
harness = false

[[bin]]
name = "rp2040-usb-msc"
test = false
doctest = false
harness = false

[profile.dev]
opt-level = "s"
lto = true
codegen-units = 1

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = 2

[dependencies]
cotton-usb-host = { path = "../../cotton-usb-host", default-features = false, features = [
  "rp2040",
] }
cotton-usb-host-hid = { path = "../../cotton-usb-host-hid", default-features = false, features = [
  "defmt",
] }
cotton-usb-host-msc = { path = "../../cotton-usb-host-msc", default-features = false, features = [
  "defmt",
] }
cotton-scsi = { path = "../../cotton-scsi", default-features = false }
cotton-ssdp = { path = "../../cotton-ssdp", default-features = false, features = [
  "smoltcp",
] }
cotton-netif = { path = "../../cotton-netif", default-features = false }
cotton-unique = { path = "../../cotton-unique", default-features = false }
cotton-w5500 = { path = "../../cotton-w5500", default-features = false, features = [
  "smoltcp",
  "w5500-evb-pico",
] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7"
defmt = "1"
defmt-rtt = "1"
futures = { version = "0.3", default-features = false }
panic-probe = { version = "1", features = ["print-defmt"] }
rp-pico = "0.9"
rp2040-flash = "0.5"
rp2040-hal = { version = "0.10", features = ["rt", "critical-section-impl"] }
critical-section = "1.1"
embedded-hal = "1"
embedded-hal-nb = "1"
fugit = "0.3"
systick-monotonic = "1.0"

w5500 = "0.6"
smoltcp = { version = "0.12", features = [
  "medium-ethernet",
  "proto-ipv4",
  "socket-udp",
  "socket-tcp",
  "defmt",
  "proto-dhcpv4",
  "socket-dhcpv4",
], default-features = false }
uuid = { version = "1.8", default-features = false, features = ["v8"] }
git-version = "0.3.9"

rtic = { version = "2.1", features = ["thumbv6-backend"] }
rtic-monotonics = { version = "2.0.2", features = ["rp2040"] }
rtic-sync = "1.0.2"
rtic-common = "1"
futures-util = { version = "0.3", default-features = false }
static_cell = "2"
portable-atomic = { version = "1", features = ["critical-section"] }
pc-keyboard = { git = "https://github.com/rust-embedded-community/pc-keyboard.git", rev="6d03cf7" }
