[package]
authors = ["Peter Hartley <pdh@utter.chaos.org.uk>"]
name = "cross-rp2040"
publish = false
edition = "2021"
version = "0.0.1"
autotests = false

[[bin]]
name="hello"
test = false
doctest = false
harness = false

[[bin]]
name="rp2040-w5500-dhcp-rtic"
test = false
doctest = false
harness = false

[dependencies]
cotton-ssdp = { path = "../../cotton-ssdp", default_features = false }
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
#defmt-test = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
# We need a rp-pico (in the rp-hal-boards repo) with rp2040-hal 0.10 in it
rp-pico = { git="https://github.com/rp-rs/rp-hal-boards.git", rev = "3fdd613", version = "0.8" }
w5500-dhcp = { git="https://github.com/newAM/w5500-rs", rev = "5384cec", version = "0.6", default_features = false, features = ["defmt"] }
# rp2040-flash = "0.4"
cortex-m-rtic = "1"
rp2040-hal = { version="0.10", features=["rt"] }
siphasher = { version = "1", default-features = false }

# We need one AFTER they moved embedded-hal to 1, but BEFORE they
# moved MSRV to 1.77 (by using ip_in_core)
w5500-ll = { git="https://github.com/newAM/w5500-rs", rev = "5384cec", features = ["eh1"] }
embedded-hal = "1"
embedded-hal-nb = "1"
embedded-hal-bus = "0.1"
