[package]
authors = ["Peter Hartley <pdh@utter.chaos.org.uk>"]
name = "cross-rp2040-w5500"
publish = false
edition = "2021"
version = "0.0.1"
autotests = false

[lib]
test = false
doctest = false
harness = false

[[bin]]
name="hello"
test = false
doctest = false
harness = false

[[bin]]
name="rp2040-w5500-dhcp-rtic"
test = false
doctest = false
harness = false

[[bin]]
name="rp2040-w5500macraw-dhcp-rtic"
test = false
doctest = false
harness = false

[dependencies]
cotton-ssdp = { path = "../../cotton-ssdp", default_features = false, features = ["smoltcp"] }
cotton-netif = { path = "../../cotton-netif", default_features = false }
cotton-unique = { path = "../../cotton-unique", features = ["rp2040"] }
cotton-w5500 = { path = "../../cotton-w5500", default_features = false, features = ["smoltcp", "w5500-evb-pico"] }
cortex-m = { version = "0.7.7", features = ["critical-section"] }
cortex-m-rt = "0.7"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
rp-pico = "0.9"
w5500-dhcp = { git="https://github.com/newAM/w5500-rs", rev = "5384cec", version = "0.6", default_features = false, features = ["defmt"] }
# We need a rp2040-flash with rp2040-hal 0.10 in it
rp2040-flash = { git="https://github.com/pdh11/rp2040-flash", rev = "2bf31c9", version = "0.4" }
cortex-m-rtic = "1"
rp2040-hal = { version="0.10", features=["rt"] }

# We need one AFTER they moved embedded-hal to 1, but BEFORE they
# moved MSRV to 1.77 (by using ip_in_core)
w5500-ll = { git="https://github.com/newAM/w5500-rs", rev = "5384cec", features = ["eh1"] }
embedded-hal = "1"
embedded-hal-nb = "1"
embedded-hal-bus = "0.1"
fugit = "0.3"
systick-monotonic = "1.0"

w5500 = { git="https://github.com/kellerkindt/w5500", rev = "74ef8391", version = "0.4.1" }
smoltcp = { version = "0.11", features = [ "medium-ethernet", "proto-ipv4", "socket-udp", "socket-tcp", "defmt", "proto-dhcpv4", "socket-dhcpv4", "proto-igmp"], default-features = false }
embedded-alloc = "0.5"
no-std-net = { version = "0.6", default_features = false }
uuid = { version = "1.8", default_features = false, features = ["v8"] }
